--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index"
   },
-  "keywords":  [
+  "keywords": [
     "example",
     "heroku"
   ],
@@ -17,10 +17,9 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4"
-    
   },
-  
   "engines": {
     "node": "16.15.0"
   }
